# calculator-algorithm

./: pyproject.toml
src/calculator_algorithm/: __init__.py  constants.py  errors.py  types_.py
src/calculator_algorithm/utils/: __init__.py  helpers.py  recursive.py
tests/: conftest.py  test_operation_to_str.py  test_resolve_operation.py  test_tokenize.py  test_tokens_to_operation.py
