[project]
name = "calculator-algorithm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "raidelo", email = "raidelosix@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
calculator-algorithm = "calculator_algorithm:main"

[build-system]
requires = ["uv_build>=0.10.11,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
